--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation libs.constraintlayout
     implementation libs.cardview
     implementation libs.playservicesauth
+    implementation libs.zxing.core
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
